sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:13: error: not found: value bonJoueurGauche
       while(!bonJoueurGauche(B)){
              ^